# C00251168-Chess-Bot

./: CMakeLists.txt  DesignDocument.docx  Doxyfile  ProjectSpecification.docx  README.md  bitboard.c++  board.cpp  board.h  bot.c++  iteration1Screencast.mkv  main.cpp  move.cpp  move.h  moveGeneration.cpp  moveGeneration.h  psudeocode.txt  temp.c++
Documents/: DesignDocument.docx  FinalReport.docx  Presentation.pptx
html/: annotated.html  board_8cpp.html  board_8h.html  board_8h_source.html  class_board-members.html  class_board.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  evaluation_8cpp.html  evaluation_8h.html  evaluation_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  main_8cpp.html  make_move_8cpp.html  make_move_8h.html  make_move_8h_source.html  menudata.js  move_8cpp.html  move_8h.html  move_8h_source.html  move_generation_8cpp.html  move_generation_8h.html  move_generation_8h_source.html  move_validation_8cpp.html  move_validation_8h.html  move_validation_8h_source.html  search_8cpp.html  search_8h.html  search_8h_source.html  (+10 more)
include/: board.h  evaluation.h  makeMove.h  move.h  moveValidation.h  search.h  uciConversion.h  undoMove.h
latex/: annotated.tex  board_8cpp.tex  board_8h.tex  board_8h_source.tex  class_board.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  evaluation_8cpp.tex  evaluation_8h.tex  evaluation_8h_source.tex  files.tex  main_8cpp.tex  (+24 more)
(+63 files in other folders)
